# xsodus_converter

./: .gitignore  HANA_PRIVILEGE_GRANT_INSTRUCTIONS.txt  MIGRATION_SUCCESS.md  README.md  restart_server.bat
.claude/: CLAUDE.md  MANDATORY_PROCEDURES.md  (+2 more)
core/: README.md  package_mappings.db  pyproject.toml
core/src/x2s_core/: __init__.py  package_mapper.py  package_mapping_db.py
core/src/x2s_core/database/: db.py  models.py
core/src/x2s_core/models/: models.py  types.py
core/src/x2s_core/parser/: __init__.py  column_view_parser.py  scenario_parser.py  xml_format_detector.py
pipelines/bex-to-cv/: GOLDEN_COMMIT.yaml  pyproject.toml
pipelines/bex-to-cv/docs/: BUG_TRACKER.md  SOLVED_BUGS.md
pipelines/bex-to-cv/src/bex_to_cv/: __init__.py
pipelines/bex-to-cv/src/bex_to_cv/catalog/: __init__.py  loader.py
pipelines/bex-to-cv/src/bex_to_cv/domain/: __init__.py  models.py  types.py
pipelines/bex-to-cv/src/bex_to_cv/parser/: __init__.py  bex_parser.py
pipelines/bex-to-cv/src/bex_to_cv/renderer/: __init__.py  cv_renderer.py
pipelines/cv-to-cds/: GOLDEN_COMMIT.yaml  pyproject.toml
pipelines/cv-to-cds/docs/: BUG_TRACKER.md  SOLVED_BUGS.md
pipelines/cv-to-cds/src/cv_to_cds/: __init__.py
pipelines/cv-to-cds/src/cv_to_cds/catalog/: __init__.py
pipelines/cv-to-cds/src/cv_to_cds/domain/: __init__.py
pipelines/cv-to-cds/src/cv_to_cds/parser/: __init__.py
pipelines/cv-to-cds/src/cv_to_cds/renderer/: __init__.py
pipelines/xml-to-sql/: GOLDEN_COMMIT.yaml  README.md  config.example.yaml  config.yaml  pyproject.toml  run_server.py
pipelines/xml-to-sql/VALIDATED/hana/: CV_CNCLD_EVNTS.sql  CV_EQUIPMENT_STATUSES.sql  CV_INVENTORY_ORDERS.sql  CV_PURCHASE_ORDERS.sql  CV_TOP_PTHLGY.sql  README.md
pipelines/xml-to-sql/catalog/hana/: loader.py
pipelines/xml-to-sql/catalog/hana/data/: functions.yaml  patterns.yaml
pipelines/xml-to-sql/docs/: BUG_TRACKER.md  CONVERSION_FLOW_MAP.md  ERROR_PROCEDURE_NO_BASELINE.md  SOLVED_BUGS.md  SQL_ERROR_INVESTIGATION_PROCEDURE.md  SUCCESS_PROCEDURE.md  TESTING.md
pipelines/xml-to-sql/docs/procedures/: 1_PLANNING_PROCEDURE.md  2_DEVELOPMENT_PROCEDURE.md  3_TESTING_PROCEDURE.md  4_DEBUGGING_PROCEDURE.md  5_BUG_FIX_PROCEDURE.md  6_DOCUMENTATION_PROCEDURE.md  7_REFACTORING_PROCEDURE.md
pipelines/xml-to-sql/rules/hana/: HANA_CONVERSION_RULES.md
pipelines/xml-to-sql/rules/snowflake/: SNOWFLAKE_CONVERSION_RULES.md
pipelines/xml-to-sql/src/api/: __init__.py  routes.py  sse_helper.py
pipelines/xml-to-sql/src/api/services/: __init__.py
pipelines/xml-to-sql/src/renderer/: renderer.py
pipelines/xml-to-sql/src/translator/: function_translator.py
pipelines/xml-to-sql/src/xml_to_sql/: __init__.py  package_mapping_watcher.py  version.py
pipelines/xml-to-sql/src/xml_to_sql/abap/: __init__.py  generator.py  pure_generator.py  sql_to_abap.py
pipelines/xml-to-sql/src/xml_to_sql/bw/: __init__.py  wrapper_generator.py
pipelines/xml-to-sql/src/xml_to_sql/catalog/: __init__.py  pattern_loader.py
pipelines/xml-to-sql/src/xml_to_sql/cli/: __init__.py  __main__.py  app.py  package_helper.py
pipelines/xml-to-sql/web_frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
pipelines/xml-to-sql/web_frontend/src/: App.css  App.jsx  design-tokens.css  index.css
(+107 files in other folders)
