[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x2s-core"
version = "1.0.0"
description = "X2S Core - Shared foundation for all pipelines"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.2.0",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
